# lanaccess_challenge

./: .gitignore  Dockerfile  Pretrained YOLOv8N two classes.dvc  README.md  datasets.py  detect_objects.py  main.py  pyproject.toml  train_yolo.py  utils.py
.dvc/: config
data/: samples.dvc
