[tool.poetry]
name = "lanaccess"
version = "0.1.0"
description = ""
authors = ["Jose Fonceca <ilbertofjunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
nvidia-cudnn-cu12 = "^8.9.0.131"
tensorflow = "2.12"
coco-utils = "^0.0.3"
ultralytics = "^8.0.83"
pylint = "^2.17.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
