[tool.poetry]
name = "lanaccess"
version = "0.1.0"
description = ""
authors = ["Jose Fonceca <ilbertofjunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^1.10"
torchvision = "^0.14"
coco-utils = "^0.0.3"
ultralytics = "^8.0.83"
pylint = "^2.17.2"
black = "^23.3.0"
mypy = "^1.2.0"
kaleido = "0.2.1"
fiftyone = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
follow_imports_silent = true
show_column_numbers = true
strict = true
